bdr.BDR2.scala.error
Erreur de compilation :
BDR2:5: error: '(' expected but identifier found.
  if  msg match{
      ^BDR2:23: error: illegal start of simple expression
} 
^